force-app/main/default/objects/ProjectOpportunity__c/ProjectOpportunity__c.object-meta.xml
<CustomObject>
    <label>Project Opportunity</label>
    <nameField>
        <displayFormat>ProjOpp{000000}</displayFormat>
        <label>Project Opp Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProjectOpportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>