force-app/main/default/objects/ProjectOpportunity__c/fields/Related_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity_Stage__c</fullName>
    <formula>TEXT(Project__r.Stage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Opportunity Stage</label>
    <type>Text</type>
</CustomField>